--- a/RACDemo/Base.lproj/Main.storyboard
+++ b/RACDemo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pjf-kc-yVD">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -20,11 +20,48 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g2t-uQ-98t">
+                                <rect key="frame" x="162" y="318" width="50" height="30"/>
+                                <color key="backgroundColor" red="1" green="0.5188210263170322" blue="0.38564689956178544" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="nextVC"/>
+                                <connections>
+                                    <action selector="didClickBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qgT-Nb-Wic"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="g2t-uQ-98t" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Dej-A1-WAO"/>
+                            <constraint firstItem="g2t-uQ-98t" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="zAg-87-y9w"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Jlg-yD-ZQD"/>
+                    <connections>
+                        <outlet property="button" destination="g2t-uQ-98t" id="dYx-Ug-EgA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="945" y="129"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="M08-PE-dEd">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pjf-kc-yVD" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="onv-ix-J91">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="iQT-D8-5ql"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HGB-vb-uoG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136" y="129.53523238380811"/>
         </scene>
     </scenes>
 </document>
